--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
 h1{
   color: black;
   font-size: 40pt;
-  margin-left: 30%;
+  margin-left: 35%;
+  margin-right: 35%;
+  text-align: center;
 }
 form {
   margin-left: 35%;
   margin-right: 35%;
 }
 input[type="text"], input[type="password"] {
-  box-sizing: border-border-box;
+  box-sizing: border-box;
   width: 100%;
   margin-bottom: 10px;
 }
