--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 h1{
   color: black;
   font-size: 40pt;
-  margin-left: 35%;
-  margin-right: 35%;
+  margin-left: 15%;
+  margin-right: 15%;
   text-align: center;
 }
-form {
+form, #options {
   margin-left: 35%;
   margin-right: 35%;
 }
@@ -14,9 +14,9 @@ input[type="text"], input[type="password"] {
   width: 100%;
   margin-bottom: 10px;
 }
-input[type="submit"] {
+input[type="submit"], button {
   box-sizing: border-box;
-  width: 20%;
-  margin-left: 40%;
-  margin-right: 40%;
+  width: 40%;
+  margin-left: 30%;
+  margin-right: 30%;
 }
